--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cordova-plugin-x-socialsharing": "^5.1.8",
     "cordova-sqlite-storage": "^2.0.4",
     "es6-promise-plugin": "^4.2.2",
+    "ionic": "^4.2.1",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
