--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/storage": "^2.1.3",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@yellowspot/ng-truncate": "^1.4.0",
     "angular-svg-round-progressbar": "^2.0.0",
     "body-parser": "^1.18.2",
     "card.io.cordova.mobilesdk": "^2.1.0",
