--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
     "cordova-custom-config": "^5.0.2",
     "cordova-ios": "4.5.4",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-stripe": "^1.5.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-plugin-x-socialsharing": "^5.1.8",
-    "cordova-sqlite-storage": "^2.0.4",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.3",
+    "cordova-sqlite-storage": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
     "ionic": "^4.2.1",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
-    "onesignal-cordova-plugin": "2.1.0",
+    "onesignal-cordova-plugin": "^2.1.0",
     "rxjs": "^5.5.6",
     "sw-toolbox": "^3.6.0",
     "zone.js": "^0.8.20"
@@ -90,14 +90,16 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-geolocation": {
-        "Default delivery point detection": " "
+        "Default delivery point detection": " ",
+        "GEOLOCATION_USAGE_DESCRIPTION": " "
       },
       "onesignal-cordova-plugin": {},
       "com.paypal.cordova.mobilesdk": {},
       "cordova-custom-config": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
