--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "cordova-android": "6.4.0",
     "cordova-browser": "5.0.3",
     "cordova-custom-config": "^5.0.2",
-    "cordova-ios": "4.5.4",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
@@ -95,11 +94,11 @@
       },
       "onesignal-cordova-plugin": {},
       "com.paypal.cordova.mobilesdk": {},
-      "cordova-custom-config": {}
+      "cordova-custom-config": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
